Servlet refinement for Persistence Interface;